M1721 Fix dropdown spacing

--- a/src/style/buttons.module.scss
+++ b/src/style/buttons.module.scss
@@ -114,7 +114,7 @@
 
   //Dropdown specific
   &:nth-of-type(2) {
-    padding: 11.5px 10px;
+    padding: 7px $spacing-medium; //spacing exception
     border-left: none;
   }
 }
